--- a/README
+++ b/README
@@ -7,4 +7,4 @@ Memory trainers. Games designed to challenge your short term memory.
 Verbal analogies. Games that challenge your verbal aptitude. 
 
 gbrainy provides different difficulty levels making gbrainy enjoyable for kids, adults or senior citizens. It also features player's game history, player's personal records, tips for the player, or fullscreen mode. gbrainy can be also extended easily with new games developed by third parties. 
-
+By caixiaomin in master.
